feature: implement role-based authentication and authorization (#1)
* feat: implement role based authorization

* feat: add role based security flow